--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "repository": "https://github.com/AdautoDCJunior/simple-typescript-eslint-prettier",
   "author": "Adauto Júnior <adautodcjunior@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint \"**/*.{ts,tsx}\""
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
     "typescript": "^4.7.4"
   }
 }
