--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "author": "Adauto Júnior <adautodcjunior@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.{ts,tsx}\""
+    "dev": "yarn lint && yarn build",
+    "build": "yarn tsc",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
+    "format": "prettier --write \"**/*.+(js|ts|json)\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
