--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Adauto Júnior <adautodcjunior@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn lint && yarn build",
+    "dev": "nodemon ./src/index.ts",
     "build": "yarn tsc",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "format": "prettier --write \"**/*.+(js|ts|json)\""
@@ -16,7 +16,9 @@
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
